Fixed spacing on bottom of blog section, added css, fixed the width issue in the contact me section, updated to carousel picture.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,38 @@
+body{
+  width:100%;
+  height:100%;
+  font-family: 'Roboto Condensed', sans-serif;
+  position: relative; /* required */
+  padding-top: 70px;	/* prevent content to go underneath the fixed navbar */
+}
+
+
+h1,h2,h3 {
+  margin:0 0 35px 0;
+  font-family: 'Patua One', cursive;
+  text-transform: uppercase;
+  letter-spacing:1px;
+}
+
+p{
+  margin:0 0 25px;
+  font-size:20px;
+  line-height:1.6em;
+}
+a{
+  color:#26a5d3;
+  font-size: 20px;
+}
+a:hover,a:focus{
+  text-decoration:none;
+  color:#26a5d3;
+}
 h3 {
   text-align: center;
+}
+
+#contactMeButton {
+  padding-right: 25px;
 }
 
 .header {
@@ -28,7 +61,6 @@ h3 {
 }
 
 .carousel{
-    background: #2f4357;
     margin-top: 20px;
 }
 .carousel .item img{
@@ -39,12 +71,41 @@ h3 {
 }
 
 .carousel-caption {
+  color: black;
+}
+
+.by {
   color: red;
 }
 
 .thumbnail {
   background-color: honeyDew;
 }
+
+#contact{
+	background: #7AA4A8 ;
+	color:#f4f4f4;
+	padding-bottom:80px;
+}
+
+.form-group {
+  padding-left: 25px;
+  width: 100%;
+}
+textarea.form-control{
+    height:100px;
+}
+
+#blogContent {
+  padding-bottom:
+    60px;
+}
+
+#aboutSec, #work, #blog, #contact {
+  padding-top: 60px;
+}
+
+
 /*
 *, *:before, *:after {
     -webkit-text-size-adjust: border-box;
